--- a/html-css-course/css-box-model/buttons.html
+++ b/html-css-course/css-box-model/buttons.html
@@ -7,15 +7,17 @@
       .tweet-btn {
         cursor: pointer;
         border-radius: 2px;
-        height: 36px;
         transition: opacity 0.15s;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-left: 16px;
+        padding-right: 16px;
       }
 
       .subs-btn {
         background-color: rgb(200, 0, 0);
         color: white;
         border: none;
-        width: 105px;
         margin-right: 8px;
       }
 
@@ -33,9 +35,10 @@
         border-style: solid;
         border-width: 1px;
         color: rgb(6, 95, 212);
-        width: 62px;
         margin-right: 8px;
         transition: background-color 0.15s, color 0.15s;
+        padding-top: 9px;
+        padding-bottom: 9px;
       }
 
       .join-btn:hover {
@@ -51,7 +54,6 @@
         background-color: rgb(29, 155, 240);
         color: white;
         border: none;
-        width: 70px;
         border-radius: 18px;
         font-weight: bold;
         font-size: 15px;
