--- a/html-css-course/img-text-boxes/exercises/7f-linkedin-signup.html
+++ b/html-css-course/img-text-boxes/exercises/7f-linkedin-signup.html
@@ -1,1 +1,57 @@
-<!-- I'll do this challenge later -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>LinkedIn - Sign Up</title>
+
+    <style>
+      * {
+        font-family: Arial;
+        margin-block: 0;
+      }
+
+      p {
+        font-size: 16px;
+        color: rgb(100, 100, 100);
+      }
+
+      input {
+        width: 400px;
+        padding-block: 7px;
+        border-width: 2px;
+        border-radius: 5px;
+        border-color: rgb(100, 100, 100);
+        border-style: solid;
+        margin-bottom: 20px;
+      }
+
+      .label {
+        margin-top: 20px;
+        margin-bottom: 5px;
+      }
+
+      .disclaimer {
+        margin-bottom: 20px;
+      }
+
+      button {
+        background-color: rgb(10, 102, 194);
+        color: white;
+        border: none;
+        font-size: 20px;
+        width: 400px;
+        padding-block: 16px;
+        border-radius: 30px;
+      }
+    </style>
+  </head>
+  <body>
+    <p class="label">Email</p>
+    <input type="text" />
+    <p class="disclaimer">
+      By clicking Agree & Join, you agree to the Privacy Policy.
+    </p>
+    <button>Agree & Join</button>
+  </body>
+</html>
