--- a/html-css-course/img-text-boxes/exercises/7g-twitter-text-box.html
+++ b/html-css-course/img-text-boxes/exercises/7g-twitter-text-box.html
@@ -1,1 +1,46 @@
-<!-- I'll do this challenge later -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Twitter</title>
+
+    <style>
+      * {
+        vertical-align: middle;
+      }
+
+      img {
+        width: 50px;
+        height: 50px;
+        object-fit: cover;
+        object-position: center;
+        border-radius: 25px;
+      }
+
+      input {
+        border: none;
+        margin-left: 5px;
+        width: 300px;
+        font-size: 18px;
+      }
+
+      button {
+        background-color: rgb(29, 155, 240);
+        color: white;
+        border: none;
+        border-radius: 30px;
+        font-weight: bold;
+        font-size: 16px;
+        padding-block: 8px;
+        padding-inline: 16px;
+        cursor: pointer;
+      }
+    </style>
+  </head>
+  <body>
+    <img src="airball.webp" />
+    <input type="text" placeholder="What's happening?" />
+    <button>Tweet</button>
+  </body>
+</html>
