--- a/html-css-course/css-display-prop/exercises/8e-uber.html
+++ b/html-css-course/css-display-prop/exercises/8e-uber.html
@@ -1,1 +1,58 @@
-<!-- I'll do this challenge later -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Uber</title>
+
+    <style>
+      * {
+        font-family: Arial;
+      }
+
+      p {
+        font-size: 40px;
+        margin-bottom: 25px;
+      }
+
+      input {
+        display: block;
+        border: none;
+        padding-block: 15px;
+        padding-inline: 20px;
+        background-color: rgb(240, 240, 240);
+        margin-bottom: 10px;
+        font-size: 16px;
+        width: 400px;
+      }
+
+      .destination {
+        margin-bottom: 35px;
+      }
+
+      button {
+        border: none;
+        padding-block: 15px;
+        padding-inline: 25px;
+        font-size: 16px;
+      }
+
+      .request {
+        background-color: black;
+        color: white;
+        margin-right: 20px;
+      }
+
+      .schedule {
+        background-color: rgb(240, 240, 240);
+      }
+    </style>
+  </head>
+  <body>
+    <p>Request a ride now</p>
+    <input type="text" placeholder="Enter pickup location" />
+    <input class="destination" type="text" placeholder="Enter destination" />
+    <button class="request">Request now</button>
+    <button class="schedule">Schedule for later</button>
+  </body>
+</html>
