Almost complete CSS Position (Relative, Absolute) - still need to do the challenges

--- a/html-css-course/css-position/youtube.html
+++ b/html-css-course/css-position/youtube.html
@@ -37,7 +37,10 @@
       <div class="right-sec">
         <img src="icons/upload.svg" class="upload-icon">
         <img src="icons/youtube-apps.svg" class="yt-apps-icon">
-        <img src="icons/notifications.svg" class="notif-icon">
+        <div class="notif-icon-container">
+          <img src="icons/notifications.svg" class="notif-icon">
+          <div class="notif-count">3</div>
+        </div>
         <img src="creators/my-channel.jpeg" class="my-channel-icon">
       </div>
     </div>
@@ -50,6 +53,7 @@
       <div class="video-preview">
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnails/thumbnail-1.webp" />
+          <div class="video-time">14:20</div>
         </div>
         <div class="v-info-grid">
           <div class="c-pic">
@@ -68,6 +72,7 @@
       <div class="video-preview">
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnails/thumbnail-2.webp" />
+          <div class="video-time">8:22</div>
         </div>
         <div class="v-info-grid">
           <div class="c-pic">
@@ -84,6 +89,7 @@
       <div class="video-preview">
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnails/thumbnail-3.webp" />
+          <div class="video-time">9:13</div>
         </div>
         <div class="v-info-grid">
           <div class="c-pic">
@@ -100,6 +106,7 @@
       <div class="video-preview">
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnails/thumbnail-4.webp" />
+          <div class="video-time">22:09</div>
         </div>
         <div class="v-info-grid">
           <div class="c-pic">
@@ -118,6 +125,7 @@
       <div class="video-preview">
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnails/thumbnail-5.webp" />
+          <div class="video-time">11:17</div>
         </div>
         <div class="v-info-grid">
           <div class="c-pic">
@@ -136,6 +144,7 @@
       <div class="video-preview">
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnails/thumbnail-6.webp" />
+          <div class="video-time">19:59</div>
         </div>
         <div class="v-info-grid">
           <div class="c-pic">
